# lane-covid-19

./: MissouriSt. Charles.csv  MissouriSt. Louis.csv  OregonLane.csv  OregonMarion.csv  OregonPolk.csv  PennsylvaniaBucks.csv  Pipfile  README.md  covid_19_rolling_average.ipynb  data_overrides.csv  data_overrides.py  pyproject.toml
.ipynb_checkpoints/: MissouriSt. Louis-checkpoint.csv  OregonLane-checkpoint.csv  covid_19_rolling_average-checkpoint.ipynb  data_overrides-checkpoint.csv  data_overrides-checkpoint.py
